--- a/src/components/CheckoutProduct/CheckoutProduct.css
+++ b/src/components/CheckoutProduct/CheckoutProduct.css
@@ -12,6 +12,11 @@
   padding-left: 20px;
 }
 
+.checkoutProduct__title {
+  font-size: 17px;
+  font-weight: 800;
+}
+
 .checkoutProduct__rating {
   display: flex;
 }
