finish subtotal component with functionality

--- a/src/components/CheckoutProduct/CheckoutProduct.css
+++ b/src/components/CheckoutProduct/CheckoutProduct.css
@@ -1,5 +1,8 @@
 .checkoutProduct {
   display: flex;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  /* max-height: 180px; */
 }
 
 .checkoutProduct__image {
